# client

./: .drone.yml  .gitignore  crashapp  owncloud
src/gui/: main.cpp
src/libsync/: CMakeLists.txt  networkjobs.cpp  networkjobs.h  owncloudpropagator.cpp  owncloudpropagator.h  syncfileitem.h
src/libsync/graphapi/: drives.cpp  drives.h
test/: testsyncconflict.cpp  testsyncvirtualfiles.cpp
test/gui/shared/scripts/pageObjects/: PublicLinkDialog.py  SharingDialog.py
test/gui/shared/steps/: steps.py
test/gui/tst_sharing/: test.feature
test/pact/: .gitignore  CMakeLists.txt  Makefile  conanfile.txt  example.cpp
test/testutils/: syncenginetestutils.cpp
